Found bug in extra large screen sizes 2400px and 2900px with Bio and Connect overlap

--- a/src/components/Bio/Bio.module.scss
+++ b/src/components/Bio/Bio.module.scss
@@ -22,6 +22,12 @@
   @media (min-width: 1900px) {
     top: 7rem;
   }
+  @media (min-width: 2400px) {
+    top: 8rem;
+  }
+  @media (min-width: 2900px) {
+    top: 9rem;
+  }
 }
 
 .bioContainerInactive {
